--- a/sam2/configs/sam2.1_training/sam2.1_hiera_b+_MOSE_finetune.yaml
+++ b/sam2/configs/sam2.1_training/sam2.1_hiera_b+_MOSE_finetune.yaml
@@ -13,8 +13,8 @@ scratch:
 
 dataset:
   # PATHS to Dataset
-  img_folder: null # PATH to MOSE JPEGImages folder
-  gt_folder: null  # PATH to MOSE Annotations folder
+  img_folder: /home/visionnav/code/sam2/dataset/wrappallet/train/images # PATH to MOSE JPEGImages folder
+  gt_folder: /home/visionnav/code/sam2/dataset/wrappallet/train/masks  # PATH to MOSE Annotations folder
   file_list_txt: training/assets/MOSE_sample_train_list.txt # Optional PATH to filelist containing a subset of videos to be used for training
   multiplier: 2
 
